kubernetes/apps/readarr/readarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  namespace: readarr
  labels:
    app: readarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      restartPolicy: Always
      containers:
        - name: readarr
          image: ghcr.io/faustvii/readarr:0.10.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8787
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: readarr-config
        - name: media
          persistentVolumeClaim:
            claimName: readarr-media
