kubernetes/apps/readarr/readarr/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: readarr
  labels:
    app: readarr
spec:
  type: ClusterIP
  selector:
    app: readarr
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
