kubernetes/apps/readarr/readarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr
  namespace: readarr
spec:
  hostnames:
    - readarr.garage.neo-tix.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: readarr
          namespace: readarr
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
